test/should-fail/负数.j
function test takes nothing returns nothing
    local integer i = 5
    local integer i2 = - i
    local handle u = null
    local boolean b = - u
endfunction